UI (labels) fixed ui dark mode and other grid view

--- a/frontend/src/app/features/dashboard/components/main-content/main-content.scss
+++ b/frontend/src/app/features/dashboard/components/main-content/main-content.scss
@@ -222,3 +222,8 @@ $color-accent: var(--color-accent);
     }
   }
 }
+
+
+main.main-content{
+  width: 100vw;
+}
